welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	weekday = true
                ^sleepIn:3: error: reassignment to val
	vacation = true
                 ^sleepIn:5: error: not enough arguments for method sleepIn: (weekday: Boolean, vacation: Boolean)Boolean.
Unspecified value parameter vacation.
sleepIn(weekDay && vacation) 
       ^