welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	weekday = true
	vacation = true
}	
sleepIn(weekDay && vacation)